--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ body  {
     background-color: #333;
 }
 
+.links a:hover {
+    background-color: yellowgreen;
+}
+
 .wrapper  {
     display: flex;
     flex-direction: column;
@@ -34,10 +38,11 @@ body  {
     border:1px; 
     border-radius: 10px;
     max-width:280px;
-    height:68%; 
+    height:auto; 
     margin:auto auto;
     width:100%;  
     background-color: #222;
+    padding:auto auto; 
    
 }
 .links {
@@ -46,6 +51,7 @@ body  {
     gap:1rem; 
     text-decoration: none;
     padding-top:2rem; 
+    padding-bottom:1rem; 
 }
 
 img {
